src/test/deca/context/invalid/created/test_invalid_extends.deca
// Erreur : on ne peut pas faire "extends" sans nom de classe après

class A extends B{ 
    int x;
}